--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,4 +1,12 @@
 .logo{
     font-family: 'Next Sphere', sans-serif;
     color: #fff;
+
+    h1{
+        font-size: 1rem;
+    }
+
+    h2{
+        font-size: .7rem;
+    }
 }
