--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,3 +1,16 @@
 .menu{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    color: #fff;
+    cursor: pointer;
 
+    img{
+        width: 20px;
+    }
+
+    p{
+        font-weight: 500;
+        font-size: 13px;
+    }
 }
