--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,3 +1,7 @@
 nav{
-    
+    padding: 2rem 3rem;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    z-index: 100;
 }
