--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,27 @@
 @import url('https://fonts.cdnfonts.com/css/next-sphere');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
-    
+    font-family: 'Poppins', sans-serif;
+}
+
+a{
+    color: indianred;
+    text-decoration: none;
+}
+
+button, input{
+    background: transparent;
+    border: none;
+    outline: none;
+}
+
+button{
+    cursor: pointer;
 }
