--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -4,9 +4,11 @@
 
     h1{
         font-size: 1rem;
-    }
+letter-spacing: 2px;
+}
 
-    h2{
-        font-size: .7rem;
+h2{
+    font-size: .7rem;
+    letter-spacing: 2px;
     }
 }
