--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,6 +2,7 @@ nav{
     padding: 2rem 3rem;
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     position: relative;
     z-index: 100;
 }
