--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/next-sphere');
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import "animate.css";
+
 *{
     padding: 0;
     margin: 0;
@@ -9,6 +11,7 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+    cursor: none;
 }
 
 a{
@@ -24,4 +27,8 @@ button, input{
 
 button{
     cursor: pointer;
+}
+
+li{
+    list-style: none;
 }
